# rtems

./: .gitignore
cpukit/score/cpu/arm/rtems/score/: cpuatomic.h
cpukit/score/cpu/i386/rtems/score/: cpuatomic.h
cpukit/score/cpu/powerpc/rtems/score/: atomic_cpu.h  cpuatomic.h
cpukit/score/inline/rtems/score/: atomic.inl
testsuites/smptests/: Makefile.am  configure.ac
testsuites/smptests/smppflock/: Makefile.am  init.c  smppflock.doc
